--- a/index.html
+++ b/index.html
@@ -3,45 +3,25 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style/popup-modal.css">
     <link rel="stylesheet" href="style/base-modal.css">
+    <link rel="stylesheet" href="style/expenses-form.css">
 </head>
 
-<body onload="showModal()">
+<body onload="showIncomeForm()">
 
     <div>
-        <button type="button" onclick="showModal()">Open Modal</button>
+        <button type="button" onclick="showIncomeForm()">Add Income</button>
     </div>
-
-    <div id="id01" class="modal">
-
-        <form class="modal-content animate" onsubmit="return saveState()">
-            <div class="imgcontainer">
-                <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                    title="Close Modal">&times;</span>
-                <img src="resources/icon_form1.png" alt="Avatar" class="avatar">
-            </div>
-
-            <div class="container">
-                <label for="uname"><b>Monthly Income</b></label>
-                <input type="text" placeholder="Enter Monthly Income" name="uname" required>
-
-                <label for="psw"><b>Budget Ending Date</b></label>
-                <input type="text" placeholder="Enter Budget Ending Date" readonly class="datepicker" name="psw"
-                    required>
-
-
-                <button type="submit">Submit</button>
-            </div>
-
-            <div class="container" style="background-color:#f1f1f1">
-                <button type="button" onclick="document.getElementById('id01').style.display='none'"
-                    class="cancelbtn">Cancel</button>
-            </div>
-        </form>
+    <div>
+        <button type="button" onclick="showExpensesForm()">Add Expense</button>
     </div>
 
     <article class="leaderboard">
@@ -77,7 +57,28 @@
         </main>
     </article>
 
+
+
     <script src="scripts/baseScript.js"></script>
 </body>
 
 </html>
+
+<!-- to load html files in main html -->
+
+<!-- <html> 
+  <head> 
+    <script src="jquery.js"></script> 
+    <script> 
+    $(function(){
+      $("#DivContent").load("another_file.html"); 
+    });
+    </script> 
+  </head> 
+
+  <body> 
+     <div id="DivContent"></div>
+  </body> 
+</html> -->
+
+<!-- $("#DivContent").load("yourFile.html") -->
