--- a/expenses-form.html
+++ b/expenses-form.html
@@ -4,7 +4,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -21,8 +20,8 @@
         <form id="expenses_form" class="modal-content animate" onsubmit="return saveExpensesFormState()">
             <div class="form-row top2">
                 <div class="col">
-                    <span onclick="document.getElementById('expenses_form_div').style.display='none'"
-                        class="close" title="Close Modal">&times;</span>
+                    <span onclick="document.getElementById('expenses_form_div').style.display='none'" class="close"
+                        title="Close Modal">&times;</span>
                 </div>
             </div>
             <div class="form-row form-title center">
@@ -113,7 +112,7 @@
 
     <script src="scripts/baseScript.js"></script>
     <script src="scripts/expensesScript.js"></script>
-    <!-- <script src="scripts/incomeScript.js"></script> -->
+    <script src="scripts/incomeScript.js"></script>
 </body>
 
 </html>
