--- a/income-form.html
+++ b/income-form.html
@@ -56,7 +56,7 @@
                     <label for="budgetDate">Budget Date</label>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control datepicker" id="budgetDate" readonly
+                    <input type="text" class="form-control datepicker" id="budgetDate" onkeypress="return false;"
                         placeholder="Select Budget Date" name="budgetDate" required>
                 </div>
             </div>
