--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div>
         <button type="button" onclick="showExpensesForm()">Add Expense</button>
     </div>
+    <div>
+        <button type="button" onclick="showExpensesList()">Show Expenses</button>
+    </div>
 
     <div id="income_form_div" class="container form-div">
         <form id="income_form" class="modal-content animate" onsubmit="return saveIncomeFormState()">
@@ -64,7 +67,7 @@
                     <label for="budgetDate">Budget Date</label>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control datepicker" id="budgetDate" readonly
+                    <input type="text" class="form-control datepicker" id="budgetDate" onkeypress="return false;"
                         placeholder="Select Budget Date" name="budgetDate" required>
                 </div>
             </div>
@@ -158,7 +161,7 @@
                     <label for="expenseDate">Expense Date</label>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control datepicker" id="expenseDate" readonly
+                    <input type="text" class="form-control datepicker" id="expenseDate" onkeypress="return false;"
                         placeholder="Select Expense Date" name="expenseDate" required>
                 </div>
             </div>
@@ -166,6 +169,9 @@
         </form>
     </div>
 
+    <!-- <div class="container"> -->
+    <!-- <div class="form-row top2">
+            <div class="col"> -->
     <article class="leaderboard base-div">
         <header>
             <h1 class="leaderboard__title"><span class="leaderboard__title--top">Forbes</span><span
@@ -198,6 +204,60 @@
             </article>
         </main>
     </article>
+    <!-- </div>
+        </div> -->
+
+    <!-- <div class="form-row top2">
+            <div class="col"> -->
+    <div id="expenses_list_div" class="table-div animate">
+        <div class="form-row top2">
+            <div class="col">
+                <span onclick="document.getElementById('expenses_list_div').style.display='none'" class="close"
+                    title="Close Modal">&times;</span>
+            </div>
+        </div>
+        <div class="form-row top2">
+            <div class="col">
+                <table id="expenses_list" class="table table-striped order-list">
+                    <thead>
+                        <tr>
+                            <th class="th-sm" scope="col">Type</th>
+                            <th class="th-sm" scope="col">Amount</th>
+                            <th class="th-sm" scope="col">Date</th>
+                            <th class="th-sm" scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- <tr>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>1</td>
+                            <td><input type="button" class="ibtnDel btn btn-md btn-danger" value="Delete"></td>
+                        </tr>
+                        <tr>
+                            <td>sMark</td>
+                            <td>sOtto</td>
+                            <td>2</td>
+                            <td><input type="button" class="ibtnDel btn btn-md btn-danger" value="Delete"></td>
+                        </tr> -->
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="4" style="text-align: left;">
+                                <input type="button" class="btn btn-lg btn-block " id="addrow" value="Add Row" />
+                            </td>
+                        </tr>
+                        <tr>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+
+    </div>
+    <!-- </div>
+        </div> -->
+    <!-- </div> -->
 
     <script src="scripts/baseScript.js"></script>
     <script src="scripts/expensesScript.js"></script>
