--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <label for="budgetDate">Budget Date</label>
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control datepicker" id="budgetDate" onkeypress="return false;"
+                    <input type="text" class="form-control datepicker future-date" id="budgetDate" onkeypress="return false;"
                         placeholder="Select Budget Date" name="budgetDate" required>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col">
                     <input type="text" class="form-control" id="variableExpenseType" placeholder="Variable Expense Type"
-                        name="variableExpenseType">
+                        name="variableExpenseType" required>
                 </div>
             </div>
 
@@ -228,18 +228,6 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- <tr>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>1</td>
-                            <td><input type="button" class="ibtnDel btn btn-md btn-danger" value="Delete"></td>
-                        </tr>
-                        <tr>
-                            <td>sMark</td>
-                            <td>sOtto</td>
-                            <td>2</td>
-                            <td><input type="button" class="ibtnDel btn btn-md btn-danger" value="Delete"></td>
-                        </tr> -->
                     </tbody>
                     <tfoot>
                         <tr>
