--- a/index.html
+++ b/index.html
@@ -192,6 +192,38 @@
 
     </div>
 
+    <div id="budget_form_div" class="container form-div">
+        <form id="budget_form" class="modal-content animate" onsubmit="return saveBudgetFormState()">
+            <div class="form-row top2">
+                <div class="col">
+                    <span onclick="document.getElementById('budget_form_div').style.display='none'" class="close"
+                        title="Close Modal">&times;</span>
+                </div>
+            </div>
+            <div class="form-row form-title center">
+                <div class="col">
+                    <h2>Budget Form</h2>
+                </div>
+            </div>
+            <div class="form-row">
+                <h2></h2>
+            </div>
+            <div class="form-row">
+                <h2></h2>
+            </div>
+            <div class="form-row top2">
+                <div class="col-3">
+                    <label for="budgetValue">Monthly Budget</label>
+                </div>
+                <div class="col">
+                    <input type="number" step="any" min="0" class="form-control" placeholder="Enter Monthly Budget" id="budgetValue"
+                        name="budgetValue" required>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Submit</button>
+        </form>
+    </div>
+
     <div class="container">
         <div class="form-row top2">
             <div class="col">
@@ -202,7 +234,7 @@
                     </header>
 
                     <main class="list_items">
-                        <article class="list_item">
+                        <article class="list_item" onclick="openBudgetForm()">
                             <img src="resources/budget.jpg" alt="Budget" class="list_item_picture">
                             <span class="list_name">Budget</span>
                             <span class="list_value" id="budget">0.00</span>
