more validations, some refactoring

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 
 <body onload="showIncomeForm()">
 
-    <div>
+    <!-- <div>
         <button type="button" onclick="showIncomeForm()">Add Income</button>
-    </div>
+    </div> -->
 
     <div id="income_form_div" class="container form-div">
         <form id="income_form" class="modal-content animate" onsubmit="return saveIncomeFormState()">
-            <div class="form-row top2">
+            <!-- <div class="form-row top2">
                 <div class="col">
                     <span onclick="document.getElementById('income_form_div').style.display='none'" class="close"
                         title="Close Modal">&times;</span>
                 </div>
-            </div>
+            </div> -->
             <div class="form-row form-title center">
                 <div class="col">
                     <h2>Income Form</h2>
@@ -177,7 +177,7 @@
                     </thead>
                     <tbody>
                     </tbody>
-                    <tfoot>
+                    <!-- <tfoot>
                         <tr>
                             <td colspan="4" style="text-align: left;">
                                 <input type="button" class="btn btn-lg btn-block " id="addrow" value="Add Row" />
@@ -185,7 +185,7 @@
                         </tr>
                         <tr>
                         </tr>
-                    </tfoot>
+                    </tfoot> -->
                 </table>
             </div>
         </div>
